fix too large text for iframe preview

--- a/frontend/src/pages/streamer/App.scss
+++ b/frontend/src/pages/streamer/App.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   text-align: center;
   position: relative;
+  overflow: hidden;
 }
 
 main {
